--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ecom1",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://harigadupudi.github.io/ecom-project1/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
@@ -23,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build -r https://github.com/harigadupudi/ecom-project1.git"
   },
   "eslintConfig": {
     "extends": [
